apps/base/status/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: status-http
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-http
  hostnames:
    - status.harrytang.xyz # stating environment has no status page
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: status-https
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-https
  hostnames:
    - status.harrytang.xyz # stating environment has no status page
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          namespace: apps
          port: 3001
